flambda-backend/tests/backend/zero_alloc_checker/fail7.output
File "fail7.ml", line 9, characters 5-15:
Error: Annotation check for zero_alloc failed on function Fail7.test (camlFail7.test_HIDE_STAMP).
